--- a/bootstrap/css/styles.css
+++ b/bootstrap/css/styles.css
@@ -5,12 +5,18 @@
 
 .row-content {
 	margin: 0px, auto;
-	padding: 30px, 0px, 30px, 0px;
+	padding: 1000px, 0px, 30px, 0px;
 	min-height: 200px;
 }
 
+.footer {
+	background-color: #D1C4E9;
+	margin: 0px auto;
+	padding: 20px 0px 20px 0px;
+}
+
 .jumbotron {
-	padding: 70px 10px 20px 10px;
+	padding: 80px 30px 30px 30px;
 	margin: 0px auto;
 	background-color: #9575CD;
 	color: floralwhite;
@@ -18,6 +24,18 @@
 
 h1 {
 	color:white;
+}
+
+h2 {
+	color: gray;
+	padding: 20px, 0px, 10px, 0px;
+	font-size: 26px;
+}
+
+h3 {
+	color: gray;
+	padding: 200px, 0px, 10px, 0px;
+	font-size: 32px;
 }
 
 body {
